<resources>
    <string name="app_name">Food App 0.3</string>

    <string name="seting">Cài đặt</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_send">Send</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">Hello, sign in to your account</string>
    <string name="text_signin_social_media">Or Sign in using social media</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>

    <string name="text_forgot_password_title">Forgot password? No worries</string>
    <string name="text_forgot_password_message">We will send you a link to reset your password</string>

    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="m_n_l_u">Món đã lưu</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="titleFoodMain">Món ăn nổi bật</string>
    <string name="titleCategory">Món ăn phổ biến</string>
    <string name="title_activity_result_search">ResultSearchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="address">Dia chi</string>
    <string name="making">Cách làm</string>
    <string name="ing">Nguyên liệu</string>
    <string name="img_food_add">Thêm ảnh đại diện món ăn</string>
    <string name="hint_food">Tên Món: Bánh mì</string>
    <string name="hint_desc">Mô tả ngắn về món ăn</string>
    <string name="time_hint">Thời gian nấu</string>
    <string name="step_hint">Bước 1</string>
    <string name="desc_step">Bỏ vỏ nấu chín trong 30 phút rồi vớt ra</string>
    <string name="btn_add_food">Thêm bước</string>
    <string name="save_btn">Lưu</string>
    <string name="ing_input">Danh sách nguyên liệu của bạn.</string>
    <string name="hint_cmt">Thêm bình luận</string>
</resources>