<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/annonce.main.coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/flexible.example.appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:title="Title"
            app:expandedTitleMarginBottom="100dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleTextAppearance="@style/CollapsingTextAppearance.Inverse"
            app:contentScrim="?colorPrimary"
            >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_food_title"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img"
                android:scaleType="centerCrop"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                app:menu="@menu/menu_detail"
                app:layout_collapseMode="pin" >
                <ImageView
                    android:id="@+id/ic_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back_light"
                    android:outlineSpotShadowColor="@color/white"
                    />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="78dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/flexible.example.cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:contentPaddingBottom="16dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                app:cardCornerRadius="4dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="4dp"
                >
                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/img_user"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginRight="30px"
                            android:padding="2dp"
                            android:src="@drawable/ic_person"
                            app:strokeColor="@color/black"
                            app:strokeWidth="1dp"
                            app:shapeAppearanceOverlay="@style/circleImageViewStyle" />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" >
                            <TextView
                                android:layout_marginLeft="8dp"
                                android:id="@+id/tv_username"
                                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/username"
                                android:textColor="@android:color/background_dark" />
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <ImageView
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:src="@drawable/ic_place"
                                    />
                                <TextView
                                    android:id="@+id/tv_address"
                                    android:layout_marginLeft="4dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/address"
                                    android:singleLine="false"
                                    android:textColor="@android:color/background_dark" />

                            </LinearLayout>

                        </LinearLayout>


                    </LinearLayout>

<!--                    <LinearLayout-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:orientation="horizontal" >-->
<!--                        <ImageView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:src="@drawable/ic_favorite_border" />-->
<!--                        <ImageView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:src="@drawable/ic_search" />-->
<!--                        <ImageView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:src="@drawable/ic_notifications" />-->
<!--                    </LinearLayout>-->

                </LinearLayout>




            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_desc"
                        android:layout_marginLeft="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="Mô tả . . .. . "
                        android:singleLine="false"
                        android:scrollbars="vertical"
                        android:maxLines="15"
                        style="@style/TextComponent.ItemRow"
                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/line"
                    android:layout_margin="16dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@color/md_grey_200"
                    android:textSize="1dp"
                    android:gravity="center_horizontal"/>


                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="Nguyên Liệu"
                    android:textAppearance="@style/TextAppearance.Header"
                    style="@style/TextComponent.ItemRow"
                    />

                <TextView
                    android:id="@+id/tv_ing"
                    android:layout_marginLeft="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nguyên Li\nệu \nText .. .. . . .."
                    android:ellipsize="none"
                    android:scrollHorizontally="false"
                    android:singleLine="false"
                    android:maxLines="50"
                    style="@style/TextComponent.ItemRow"
                    />

                <TextView
                    android:id="@+id/line2"
                    android:layout_margin="16dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@color/md_grey_200"
                    android:textSize="1dp"
                    android:gravity="center_horizontal"/>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginLeft="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Header"
                        android:text="Cách làm"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rc_making"
                        android:layout_margin="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>
                <TextView
                    android:id="@+id/line3"
                    android:layout_margin="16dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@color/md_grey_200"
                    android:textSize="1dp"
                    android:gravity="center_horizontal"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginLeft="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Header"
                        android:text="Bình luận"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rc_comment"
                        android:layout_margin="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/img_user_cmt"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginRight="4dp"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="2dp"
                            android:src="@drawable/ic_person"
                            app:strokeColor="@color/black"
                            app:strokeWidth="1dp"
                            app:shapeAppearanceOverlay="@style/circleImageViewStyle" />

                            <TextView
                                android:layout_marginRight="16dp"
                                android:layout_marginLeft="8dp"
                                android:id="@+id/et_comment"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:clickable="true"
                                android:focusable="true"
                                android:cursorVisible="false"
                                android:background="@drawable/rounded_item_2"
                                android:drawablePadding="12dp"
                                android:hint="@string/hint_cmt"
                                android:minWidth="320dp"
                                android:minHeight="50dp"
                               />
                    </LinearLayout>



                </LinearLayout>

                <TextView
                    android:id="@+id/line4"
                    android:layout_margin="16dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@color/md_grey_200"
                    android:textSize="1dp"
                    android:gravity="center_horizontal"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginLeft="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Header"
                        android:scrollbars="vertical"
                        android:singleLine="false"
                        android:maxLines="15"
                        android:text="Các món mới của A.."/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_margin="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>